<resources>
    <string name="app_name">BlueNRG-Mesh</string>
    <string name="app_title">BlueNRG-Mesh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="URL_BASE">https://stblemesh.azurewebsites.net</string>
    <string name="URL_MED">/API/v1/</string>
    <string name="API_CreateNetwork">createNetwork</string>
    <string name="API_CreateInvitation">invite</string>
    <string name="API_JoinNetwork">joinNetwork</string>
    <string name="API_UploadNetwork">uploadDb</string>
    <string name="API_DownloadNetwork">downloadDb</string>
    <string name="API_SignUp">Create</string>
    <string name="API_LoginDetails">Login</string>
    <string name="API_DeleteNode">deleteNode</string>
    <string name="API_LogOut">logout</string>
    <string name="API_provisionerRegistration">provisionerRegistration</string>
    <string name="API_changePassword">changePassword</string>
    <string name="API_registerSecurityQuestion">registerSecurityQuestion</string>
    <string name="API_retrieveSecurityQuestions">retrieveSecurityQuestions</string>
    <string name="API_submitSecurityAnswer">submitSecurityAnswer</string>
    <string name="API_getNetworks">getNetworks</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_list">Devices List</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_device_appeared">New Device Found</string>
    <string name="action_setup">Lights Setup</string>
    <string name="action_share">Share network</string>
    <string name="caption_remove_all">Remove all devices</string>
    <string name="caption_remove">Remove device</string>
    <string name="caption_add_all">Add all devices</string>
    <string name="caption_search">Search for devices</string>
    <string name="caption_metric_n">Network metric N</string>
    <string name="caption_metric_m">Network metric M</string>
    <string name="caption_mna">Mesh network address</string>
    <string name="caption_gna">Group network address</string>
    <string name="caption_na">Network address</string>
    <string name="caption_name">Node name</string>
    <string name="caption_write">Add device</string>
    <string name="caption_write_known">Update device</string>
    <string name="caption_show">Blink</string>
    <string name="caption_device_appeared">"Do you want to add\n %s device?"</string>
    <string name="tip_add_new_device">Hint: add new device using menu</string>
    <string name="enable_bluetooth">Bluetooth is disabled. Please enable bluetooth.</string>
    <string name="moble_start_fail">Unable to start MoBLE stack. Please check if Bluetooth is enabled.</string>
    <string name="confirm_remove_all">Remove all configured lights from your network?</string>
    <string name="confirm_remove">Remove configured light from your network?</string>
    <string name="confirm_reset">Confirm reset</string>
    <string name="confirm_remove_nc">Remove not configured light from your network?</string>
    <string name="copyright">Copyright 2016 Motorola Solutions, Inc.</string>
    <string name="engineering_use">For engineering use only.</string>
    <string name="turnOn">Turn on</string>
    <string name="turnOff">Turn off</string>
    <string name="value_unknown">&quot;Not available&quot;</string>
    <string name="statusUnknown">Unknown</string>
    <string name="statusFailed">Failed</string>
    <string name="statusSuccess">OK</string>
    <string name="statusInprogress">In progress&#8230;</string>
    <string name="read">Read</string>
    <string name="textDimming">Dimming</string>
    <string name="network_is_full">Network is full. Unable to add new device</string>
    <string name="emptyString" />
    <string name="action_demo_mode_on">Demo mode on</string>
    <string name="action_demo_mode_off">Demo mode off</string>
    <string name="action_add_group">Add Group</string>
    <string name="action_App_Setting">App Setting</string>
    <string name="action_Exchange_Config">Exchange Configuration</string>
    <string name="network_does_not_exist">Network does not exist</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="unknown">Unknown devices</string>
    <string name="disconectedDialogTitle">Connection lost</string>
    <string name="identificationDialogTitle">Device identification</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Delete">Delete</string>
    <string name="action_about">About</string>
    <string name="action_LicenceAgreement">Licence Agreement</string>
    <string name="action_config">Load Configuration</string>
    <string name="warning">Loading a configuration file will overwrite the current configuration. Do you want to continue?</string>
    <string name="link_bluenrg_ms"><a href='www.st.com/en/wireless-connectivity/bluenrg-ms.html'>bluenrg-ms</a></string>
    <string name="add_group">Add Group</string>
    <string name="remove_group">Remove Group</string>
    <string name="remove_node">Remove Node</string>
    <string name="key_shared_prefs">SHARED_PREFS</string>
    <string name="key_complete_cloud_data">Cloud Data</string>
    <string name="warning_common_please_check_your_connection_and_try_again_later">Enable internet connection for cloud features.</string>
    <string name="key_mesh_data">MESH DATA</string>
    <string name="str_element_setting">Element Settings</string>
    <string name="str_group_setting">Group Settings</string>
    <string name="str_lights_group_settings">isLightsGroupSetting</string>
    <string name="str_add_group">Add Group</string>
    <string name="str_device_setting">Device Settings</string>
    <string name="str_lightsgroup_address">c000</string>
    <string name="key_proxy_address">PROXY ADDRESS</string>
    <string name="URL_GET_MESH_DATA">getMeshDataURL</string>
    <string name="key_mesh_configuration">Mesh Configuration</string>
    <string name="Number_OfNodes">200</string>
    <string name="action_share_email">Share Data</string>
    <string name="str_delete_mesh_data">Are you sure you want to delete your current mesh data ?</string>
    <string name="str_setting_reset">Note : All your setting will be reset to default.</string>
    <string name="key_serializable">Key_Serializable</string>
    <string name="key_view_type">KEY_VIEW_TYPE</string>
    <string name="key_user_help_data">Help DATA</string>
    <string name="title_activity_provision_add_configuration">Configuration</string>
    <string name="key_subscription_prov_data">subscription_prov</string>
    <string name="key_publication_prov_data">publication_prov</string>
    <string name="str_element_label">Element Name</string>
    <string name="str_create_network_msg_label">Do you want to setup new network or import the existing one ?</string>
    <string name="str_login_import_label">Note : Import previous network settings.</string>
    <string name="str_login_label">Login</string>
    <string name="str_create_network_label">Create Network</string>
    <string name="str_creating_network_label">Creating New Network</string>
    <string name="str_cancel_label">Cancel</string>
    <string name="str_ok_label">Ok</string>
    <string name="str_mesh_name_label">Mesh Name</string>
    <string name="str_provisioned_label">Nodes</string>
    <string name="str_provisioned_title">BlueNRG-Mesh</string>
    <string name="str_unprovisioned_label">Devices</string>
    <string name="str_group_label">Groups</string>
    <string name="str_node_label">Node</string>
    <string name="str_address_label">Address</string>
    <string name="str_unicastno_label">Unicast Address.</string>
    <string name="str_generice_model_use_label">Use Generic Model for Toggling</string>
    <string name="str_set_vendor_model_as_default">Vendor Model</string>
    <string name="str_use_reliable_as_default">Reliable Messaging</string>
    <string name="str_connect_proxy_using_node_id">Node Identity Proxy</string>
    <string name="str_helper_guide_use_label">User Help Guide on Start</string>
    <string name="str_exchange_mesh_configuration">Exchange Mesh Configuration</string>
    <string name="str_help_label">Help</string>
    <string name="str_PrivacyPolicy">Privacy Policy</string>
    <string name="str_AppSettings">App Settings</string>
    <string name="str_share_configuration_label">Share Configuration</string>
    <string name="str_load_configuration_label">Load Configuration</string>
    <string name="str_forget_network_label">Forget Current Network</string>
    <string name="str_about_label">About</string>
    <string name="str_model_label">Models</string>
    <string name="str_cloud_interaction_label">Cloud Interaction</string>
    <string name="str_cloud_invitation_label">Invite Mesh</string>
    <string name="str_cloud_join_label">Join Network</string>
    <string name="str_cloud_upload_label">Upload Network</string>
    <string name="str_cloud_login_label">Login</string>
    <string name="str_cloud_signup_label">Sign Up</string>
    <string name="str_tryagain_label">Try Again</string>
    <string name="str_import_label">Import</string>
    <string name="str_setupfrommail_label">Setup network from mail</string>
    <string name="str_setupfromcloud_label">Setup network from cloud</string>
    <string name="key_user_login_data">KEY LOGIN DATA</string>
    <string name="str_register_label">Register</string>
    <string name="str_joinnetwork_label">Join Network</string>
    <string name="str_downloadnetwork_label">Download Network</string>
    <string name="key_user_userkey_data">USER KEY</string>
    <string name="str_provisioneruuid_label">Provisioner UUID</string>
    <string name="str_meshuuid_label">Mesh UUID</string>
    <string name="str_importfrommail_label">Import network from mail</string>
    <string name="str_importfromcloud_label">Import network from cloud</string>
    <string name="key_uuid_data">KEY UUID</string>
    <string name="key_provisioner_data">KEY PROVISIONER</string>
    <string name="str_signup_successfull_label">Sign Up Successful !!</string>
    <string name="str_logout_success_label">User logged out successfully !!</string>
    <string name="str_signin_label">Sign In</string>
    <string name="str_signout_label">Sign out</string>
    <string name="str_login_success_label">Logged in successfully !!</string>
    <string name="str_netwrk_success_label">Network created successfully !!</string>
    <string name="str_netwrk_restarted_label">Network restarted successfully !!</string>
    <string name="str_filename_label">BlueNRG-Mesh.txt</string>
    <string name="str_register_provisioner_label">Register Provisioner</string>
    <string name="str_uploaded_success_label">Data uploaded successfully !!</string>
    <string name="str_user_uuid_label">User UUID</string>
    <string name="str_oldpassword_label">Old Password</string>
    <string name="str_newPassword_label">New Password</string>
    <string name="str_changepassword_label">Change Password</string>
    <string name="str_heartbeatinfo_label">Heartbeat Info</string>
    <string name="str_lastHeartBeatReceived_label">Last Heartbeat Received</string>
    <string name="str_heartbeatnote_label">Proxy feature active means that tha proxy feature of the node is active. It does not mean that the node is currently a proxy.</string>
    <string name="str_maxhopscount_label">Max Hops Count</string>
    <string name="str_minhopscount_label">Min Hops Count</string>
    <string name="str_features_label">Features</string>
    <string name="str_isRelay_label">Is Relay</string>
    <string name="str_isProxy_label">Is Proxy</string>
    <string name="str_isFriendshipActive_label">Is Friendship Active</string>
    <string name="str_isLowPowerActive_label">Is Low Power active</string>
</resources>