<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_gray_light3">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_register_provisioner_label"
                android:gravity="center"
                android:textSize="17sp"
                android:layout_marginTop="30dp"
                android:textColor="@color/ST_BLUE_DARK"
                android:textStyle="bold"/>


            <LinearLayout
                android:id="@+id/butLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lytInputedtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="2dp">

                    <EditText
                        android:id="@+id/edtUserUUID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/str_user_uuid_label"
                        android:padding="10dp"
                        android:textSize="13sp" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="2dp">

                    <EditText
                        android:id="@+id/edtProvisionerUUID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/str_provisioneruuid_label"
                        android:padding="10dp"
                        android:textSize="13sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="2dp">

                    <EditText
                        android:id="@+id/edtMeshUUID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/str_meshuuid_label"
                        android:padding="10dp"
                        android:textSize="13sp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/butRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lyt"
                    android:backgroundTint="@color/ST_primary_blue"
                    android:text="@string/str_register_label"
                    android:textColor="#FFF" />


            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>