<?xml version="1.0" encoding="utf-8"?>
<!--
/***************************************************************************************************
 *
 *       Copyright 2015 Motorola Solutions, Inc. All rights reserved.
 *
 *       The copyright notice above does not evidence any
 *       actual or intended publication of such source code.
 *       The code contains Motorola Confidential Proprietary Information.
 *
 *
 ***************************************************************************************************/
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.st.bluenrgmesh.MainActivity">

    <!--<item-->
        <!--android:id="@+id/action_demo_mode_on"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_demo_mode_on"-->
        <!--app:showAsAction="never"/>-->

    <!--<item-->
        <!--android:id="@+id/action_demo_mode_off"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_demo_mode_off"-->
        <!--app:showAsAction="never"/>-->
   <!-- <item
        android:id="@+id/action_add_group"
        android:orderInCategory="100"
        android:title="@string/action_add_group"
        android:showAsAction="never"/>-->

    <item
        android:id="@+id/add_group"
        android:orderInCategory="100"
        android:title="Add Group"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_app_settings"
        android:orderInCategory="100"
        android:title="App Setting"
        app:showAsAction="never"/>

    <item
        android:id="@+id/rel_unrel"
        android:orderInCategory="100"
        android:title="Reliable/Unreliable"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share_email"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_config"
        android:orderInCategory="101"
        android:title="@string/action_config"
        android:visible="false" />

</menu>
